--- a/Stylesheets/Upcominggames style.css
+++ b/Stylesheets/Upcominggames style.css
@@ -376,6 +376,10 @@ h2{
         color: white;
     }
 
+    .intro-descript{
+        font-size:2vw;
+    }
+
 }
 
 /*=====Game Images============================================================*/
