--- a/Stylesheets/Upcominggames style.css
+++ b/Stylesheets/Upcominggames style.css
@@ -338,7 +338,7 @@ h2{
         padding: 5px;
     }
     .card{
-        width: 35vw;
+        width: 34vw;
         height: 45vw;
         padding: o;
     }
@@ -358,9 +358,12 @@ h2{
 
     }
 
+    .card-details .game-name{
+        font-size:12px;
+    }
+
     .games .catagory .catagory-name{
         font-size: 5vw;
-        color: var(--accent-color);
     }
 
     .catagory{
@@ -376,8 +379,8 @@ h2{
         color: white;
     }
 
-    .intro-descript{
-        font-size:2vw;
+    .intro-discript{
+        font-size: 2vw;
     }
 
 }
