--- a/Stylesheets/home style.css
+++ b/Stylesheets/home style.css
@@ -191,10 +191,23 @@ main{
 
 /*==================sub-navigation=================*/
 
+@keyframes inAnimation{
+    from{
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
 #sub1, #sub2, #sub3{
     background-position: center;
     background-size: cover;
     border-radius: 20px;
+    animation: inAnimation 1s ease-out;
 }
 
 #sub1{
@@ -226,6 +239,7 @@ main{
     background-size: cover;
     background-position: center;
     border-radius: 20px;
+    animation: inAnimation 1s ease-out;
 }
 
 #sub-sec4{
@@ -233,8 +247,9 @@ main{
     background-position: center;
     background-size: cover;
     border-radius: 20px;
-
+    animation: inAnimation 1s ease-out;
 }
+
 
 #sub-sec4 h1, #sub-sec5 h1{
     background-image: linear-gradient(0deg, var(--color1),rgba(19,21,21,.5),transparent);
@@ -604,4 +619,22 @@ main{
 
 .Game:hover{
     scale: 1.03;
+}
+
+
+/*====================In Animations=======================*/
+
+@keyframes imgInAnimation{
+    from{
+        transform: translateX(-50px);
+        opacity: 0;
+    }
+    to{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+.inAnimations{
+    animation: imgInAnimation 1s ease-out;
 }
