--- a/Stylesheets/Games-page-style.css
+++ b/Stylesheets/Games-page-style.css
@@ -75,30 +75,11 @@ main{
 
 .catagories{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: fit-content;
-}
-
-.catagories a{
-    width: 100%;
-}
-
-.catagories a:hover{
-    color: var(--accent-color);
-}
-
-.catagory-name{
-    font-family: var(--Title-font);
-    font-size: 3vw;
-}
-
-.action-catagory, .RPG-catagory, .Racing-catagory{
-    display: flex;
     justify-content: center;
-    gap: 20px;
+    align-items: center;
     flex-wrap: wrap;
-    padding: 10px;
+    gap: 20px;
+    width: 80vw;
 }
 
 .card{
@@ -133,6 +114,7 @@ h4{
 
 .game-name{
     font-family: var(--Title-font);
+    font-size: 20px;
 }
 
 .description{
@@ -191,6 +173,10 @@ h4{
 
     main{
         padding: 1vw;
+    }
+
+    .catagories{
+        width: 95vw;
     }
 
     #top-title{
@@ -281,7 +267,7 @@ h4{
 
 /*===Racing===*/
 
-#Torque-Dirft2{
+#Torque-Drift2{
     background-image: url(./Images/Games/Torque-Drift-2.webp);
 }
 
