--- a/Stylesheets/style2.css
+++ b/Stylesheets/style2.css
@@ -24,6 +24,7 @@ html::-webkit-scrollbar{
 }
 
 body{
+    background-color: var(--color1);
     max-width: 100vw;
     display: grid;
     grid-template-columns:100vw;
@@ -31,7 +32,7 @@ body{
 
     min-height: 100vh;
     column-gap: 5px;
-    color: rgb(255, 250, 251);
+    color: var(--text-color);
         
     font-family: "Poppins", serif;
     font-weight: 400;
