--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -17,9 +17,21 @@ main{
 
 #cartTable{
     border: 2px solid var(--subback-color);
+    border-radius: 10px;
+    padding: 20px;
 }
 
-th, td{
-    border: 1px solid var(--subback-color);
+th{
+    border: 2px solid var(--subback-color);
+    border-radius: 10px;
     padding: 0 20px;
+    width: fit-content;
+    min-width: 200px;
+}
+
+td{
+    border-right: 2px solid var(--subback-color);
+    padding: 5px 20px;
+    width: fit-content;
+    min-width: 200px;
 }
