--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -19,6 +19,7 @@ body{
     font-style: normal;
     font-size: large;
     text-wrap: nowrap;
+    color: var(--text-color);
 }
 
 a{
@@ -190,7 +191,7 @@ main{
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap: 10px;
 
