--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Audiowide&family=Black+Ops+One&family=Bree+Serif&family=Odibee+Sans&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yatra+One&family=Zen+Dots&display=swap');
+
 :root{
     --color1: Black;
     --text-color: rgb(255, 250, 251);
@@ -179,50 +181,6 @@ main{
     cursor: pointer;
 }
 
-.totalSection{
-
-    grid-column: 2/3;
-    grid-row: 1/3;
-
-    background-color: rgb(14, 14, 14);
-    position: absolute;
-    top:0;
-    right: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-
-    width: 30vw;
-    height: 100vh;
-    border-radius: 20px 0 0 20px;
-}
-
-.Total{
-    font-family: var(--Title-font);
-    font-size: 1.5vw;
-    color: var(--accent-color);
-}
-
-.checkoutbtn{
-    width: 26vw;
-    height: 65px;
-    border: 2px solid var(--subback-color);
-    padding: 10px;
-    border-radius: 10px;
-    font-weight: 700;
-
-    font-size: 24px;
-    text-align: center;
-}
-
-.checkoutbtn:hover{
-    background-color: var(--subback-color);
-    transition: all .3s ease-out;
-}
-
 .itemAdder{
     width: 30px;
     height: 30px;
@@ -235,6 +193,73 @@ main{
 .itemAdder:hover{
     background-color: var(--subback-color);
     transition: .3s ease-out;
+}
+
+/*===== Order Confirm Section ===============================================================*/
+
+.totalSection{
+    grid-column: 2/3;
+    grid-row: 1/3;
+
+    background-color: rgb(14, 14, 14);
+    position: absolute;
+    top:0;
+    right: 0;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 70px;
+
+    width: 30vw;
+    height: 100vh;
+    border-radius: 20px 0 0 20px;
+}
+
+.TotalSecTitle{
+    font-family: var(--Title-font);
+    font-size: 2vw;
+    color: var(--accent-color);
+}
+
+/*--- Checkout Button ---*/
+
+.checkoutbtn{
+    width: 26vw;
+    height: 75px;
+    border: 2px solid var(--subback-color);
+    border-radius: 10px;
+    font-weight: 700;
+
+    font-size: 24px;
+    text-align: center;
+    isolation: isolate;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    position: absolute;
+    bottom: 20px;
+}
+
+.checkoutbtn span::before{
+    content: ' ';
+    position: absolute;
+    width: 10px;
+    aspect-ratio: 1;
+    background-color: var(--subback-color);
+    inset: 0;
+    margin: auto;
+    z-index: -1;
+    opacity: 0;
+    border-radius: 50%;
+}
+
+.checkoutbtn:hover span::before{
+    opacity: 1;
+    transform: scale(50);
+    transition: transform .45s ease-out;
 }
 
 /*===== Order Details Table==================================================================*/
@@ -254,4 +279,40 @@ main{
 
 #taxSec{
     border-bottom: 1px solid;
+}
+
+.finalPrice{
+    font-size: 3vw;
+    font-family: var(--Title-font);
+}
+
+/*===== Cart Action Buttons=================================================================*/
+
+.cartActionBtns{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.cartActions{
+    background-color: transparent;
+    border: 2px solid var(--subback-color);
+    border-radius: 10px;
+    color: var(--text-color);
+}
+
+#clearCartBtn{
+    width: 25vw;
+    height: 50px;
+}
+
+#addToFavBtn, #applyFavBtn{
+    width: 12vw;
+    height: 40px;
+}
+
+.cartActions:hover{
+    background-color: var(--subback-color);
+    transition: .3s  ease-out;
 }
