--- a/Stylesheets/peripherals-style.css
+++ b/Stylesheets/peripherals-style.css
@@ -158,7 +158,6 @@ main{
 
 }
 
-
 .card{
     width: 25vw;
     height: 21vw;
@@ -189,6 +188,7 @@ main{
 
 .price{
     font-weight: 300;
+    font-size: 1vw;
 }
 
 .card .item-pic{
@@ -208,12 +208,15 @@ main{
 }
 
 .addToCart{
-    width: 30px;
-    height: 30px;
+    width:10vw;
+    height:7vw;
     color: var(--text-color);
     background-color: transparent;
     border: 2px solid var(--subback-color);
     border-radius: 10px;
+    font-size: 12px;
+    align-self: center;
+    margin-bottom: 10px;
 }
 
 .addToCart:hover{
@@ -225,6 +228,14 @@ main{
 #page-no{
     text-align: center;
     font-size: 20px;
+}
+
+.none{
+    display: none;
+}
+
+.none2{
+    display: block;
 }
 
 /*=====Media Queries==========================================================*/
@@ -245,6 +256,7 @@ main{
         display: flex;
         flex-direction: row;
         gap: 5px;
+        padding: 0 10px;
     }
 
     .card .item-pic{
@@ -283,17 +295,31 @@ main{
     .container{
         height: 35vw;
     }
+
+    .addToCart{
+        margin-left: auto;
+        height: 30px;
+        width: 100px;
+    }
 }
 
 @media (max-width:400px) {
-
 
     .store-nav a{
         font-size: 20px;
         width: 180px;
         padding: 7px;
     }
+
+    .none{
+        display: block;
+        align-self: flex-start;
+        margin: 0;
+    }
     
+    .none2{
+        display: none;
+    }
 }
 
 /*=====Slideshow Images=======================================================*/
