--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -325,14 +325,23 @@ main{
     align-items: center;
 }
 
+.viewCartButton{
+    background-color: var(--subback-color);
+    border: 2px solid var(--subback-color);
+    border-radius: 10px;
+    padding: 10px;
+    display: none;
+}
+
 /*===== Media Queries ============================================================================*/
 
 @media(max-width:1200px){
 
     body{
         grid-template-columns: 1fr;
-        grid-template-rows:100px 500px calc(100vh - 600px) ;
+        grid-template-rows:200px 500px calc(100vh - 700px) ;
         row-gap: 20px;
+        overflow: scroll;
     }
 
     /*=== Header Section ===*/
@@ -384,21 +393,41 @@ main{
     }
 
     #addToFavBtn, #applyFavBtn{
-        width: 100px;
+        width: 40vw;
         height: 30px;
     }
 
-    .totalDisplaySec{
-        display: none;
+    .totalDisplaySec h2{
+        font-size: 24px;
+        margin-top: 20px;
+    }
+    .finalPrice{
+        font-size: 25px;
     }
 
     .TotalSecTitle{
         padding: 0;
-        font-size: 20px;
+        font-size: 24px;
     }
     
     main{
         grid-column: 1/2;
         grid-row: 3/4;
+        
+        display: flex;
+        flex-direction: column;
+        width: 100vw;
+        position: relative;
+    }
+
+    main::after{
+        content: '';
+        position: absolute;
+        display: block;
+        width: 100px;
+        height: 20px;
+        background-color: var(--subback-color);
+        top: 0;
+        clip-path: polygon(50% 0, 0 100%, 100% 100%, 50% 0);
     }
 }
