--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Audiowide&family=Black+Ops+One&family=Bree+Serif&family=Odibee+Sans&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yatra+One&family=Zen+Dots&display=swap');
 
+html{
+    scroll-behavior: smooth;}
+
 :root{
     --color1: Black;
     --text-color: rgb(255, 250, 251);
@@ -22,6 +25,9 @@ body{
     font-size: large;
     text-wrap: nowrap;
     color: var(--text-color);
+
+    margin: 0;
+    padding: 0;
 }
 
 a{
@@ -113,7 +119,8 @@ main{
     overflow-y: scroll;
 
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .tableContainer::-webkit-scrollbar{
@@ -285,7 +292,7 @@ main{
 
 .finalPrice{
     font-size: 3vw;
-    font-family: var(--Title-font);
+    font-weight:400
 }
 
 /*===== Cart Action Buttons ================================================================*/
@@ -329,8 +336,9 @@ main{
     background-color: var(--subback-color);
     border: 2px solid var(--subback-color);
     border-radius: 10px;
-    padding: 10px;
+    padding: 5px;
     display: none;
+    color: var(--text-color);
 }
 
 /*===== Media Queries ============================================================================*/
@@ -340,13 +348,15 @@ main{
     body{
         grid-template-columns: 1fr;
         grid-template-rows:200px 500px calc(100vh - 700px) ;
-        row-gap: 20px;
+        padding: 0 .5vw;
         overflow: scroll;
     }
 
     /*=== Header Section ===*/
     header{
         width: 100vw;
+        height: 100%;
+        padding-top:10px ;
     }
 
     .backBtn,.homenavi{
@@ -374,27 +384,29 @@ main{
         height: 500px;
         padding: 5px;
         gap: 10px;
+        margin-top: 20px;
     }
 
     .orderTable{
-        width: 90vw;
-        font-size: 12px;
+        width: 70vw;
+        font-size: 16px;
     }
 
     .checkoutbtn{
-        width: 90vw;
+        width: 40vw;
         height: 50px;
     }
 
     
     #clearCartBtn{
-        width: 80vw;
+        width: 38vw;
         height: 50px;
     }
 
     #addToFavBtn, #applyFavBtn{
-        width: 40vw;
+        width: 18vw;
         height: 30px;
+        font-size: 15px;
     }
 
     .totalDisplaySec h2{
@@ -423,42 +435,37 @@ main{
         padding: 10px;
     }
 
-    main::after{
-        content: '';
-        position: absolute;
+    .viewCartButton{
         display: block;
-        width: 100px;
-        height: 20px;
-        background-color: var(--subback-color);
+        margin-top: 10px;
+    }
+
+    #closeCart{
         top: 0;
-        clip-path: polygon(50% 0, 0 100%, 100% 100%, 50% 0);
     }
 
     #main-td{
         width: 95vw;
         font-size: 18px;
-        flex-direction: column;
         align-items: center;
+        justify-content: space-between;
     }
 
-    .currencySec p{
-        text-align: center;
-    }
 
     .itemsec{
         display: flex;
-        flex-direction: column;
-        width: 80vw;
+        width: 60vw;
     }
 
     .cartItemDetails{
         display: flex;
-        width: 80vw;
-        align-items: center;
+        width: fit-content;
+        align-items: start;
     }
 
     .cartItemPic{
         width: 80px;
         height: 100px;
+        padding-right: 20px;
     }
 }
