--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -381,7 +381,7 @@ main{
         position: relative;
         width: 99vw;
         border-radius: 10px;
-        height: 500px;
+        height: 75vh;
         padding: 5px;
         gap: 10px;
         margin-top: 20px;
@@ -467,5 +467,43 @@ main{
         width: 80px;
         height: 100px;
         padding-right: 20px;
+    }
+}
+
+@media(max-width:700px){
+    #clearCartBtn{
+        width: 90vw;
+    }
+
+    #addToFavBtn, #applyFavBtn{
+        width: 45vw;
+    }
+
+    .checkoutbtn{
+        width: 90vw;
+    }
+
+    .currencySec{
+        display: none;
+    }
+
+    #main-td{
+        align-items: center;
+
+        font-size: 14px;
+    }
+
+    .itemsec{
+        width: 100%;
+        flex-direction: column;
+        align-items: self-start;
+    }
+
+    .cartItemDetails{
+        width: 100%;
+    }
+
+    .cartItemPic{
+        width: 100px;
     }
 }
