--- a/Stylesheets/cartStyle.css
+++ b/Stylesheets/cartStyle.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Aldrich&family=Audiowide&family=Black+Ops+One&family=Bree+Serif&family=Odibee+Sans&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Yatra+One&family=Zen+Dots&display=swap');
 
 html{
-    scroll-behavior: smooth;}
+    scroll-behavior: smooth;
+}
+
+html::-webkit-scrollbar{
+    display: none;
+}
 
 :root{
     --color1: Black;
@@ -348,7 +353,6 @@ main{
     body{
         grid-template-columns: 1fr;
         grid-template-rows:200px 500px calc(100vh - 700px) ;
-        padding: 0 .5vw;
         overflow: scroll;
     }
 
@@ -432,7 +436,6 @@ main{
         flex-direction: column;
         width: 100vw;
         position: relative;
-        padding: 10px;
     }
 
     .viewCartButton{
@@ -471,6 +474,12 @@ main{
 }
 
 @media(max-width:700px){
+
+    body{
+        overflow: hidden;
+    }
+
+
     #clearCartBtn{
         width: 90vw;
     }
@@ -505,5 +514,37 @@ main{
 
     .cartItemPic{
         width: 100px;
+    }
+
+    .tableContainer{
+        height: 80vh;
+        position: absolute;
+        transform: translateY(-45%);
+        background-color: black;
+        border-radius: 20px;
+        border-top:2px solid var(--subback-color);
+        display: none;
+    }
+}
+
+/*===== Animations ===========================================================*/
+
+@keyframes slideup{
+    from{
+        transform: translateY(100%);
+    }
+
+    to{
+        transform: translateY(0);
+    }
+}
+
+@keyframes slidedown{
+    from{
+        transform: translateY(0);
+    }
+
+    to{
+        transform: translateY(100%);
     }
 }
