--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -17,6 +17,11 @@ body{
     background-color: black;
     overflow: hidden;
 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
     font-family: "Poppins", serif;
     font-weight: 400;
     font-style: normal;
@@ -37,6 +42,7 @@ a{
 
 header{
     width: 100vw;
+    height: 100px;
     padding: 0 20px;
     display: flex;
     justify-content: space-between;
@@ -83,4 +89,85 @@ header{
 .backBtn:hover{
     background-color: var(--subback-color);
     transition: .3s ease-out;
+}
+
+/*===== Main Section =========================================================*/
+
+main{
+    width: 60vw;
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.formContainer{
+    width: 100%;
+    height: 90%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.personalDetailsSection, .paymentDetailsSection{
+    background-color: rgb(14, 14, 14);
+    border-radius: 20px;
+    width: 40vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 0;
+}
+
+#spanTitle{
+    color: var(--accent-color) !important;
+    font-size: 30px;
+    font-family: var(--Title-font);
+}
+
+#personalDetails ,#paymentDetails{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#exDate, #code{
+    width: 100px;
+}
+
+.inputSections{
+    outline: none;
+    background-color: rgb(206, 206, 206);
+    border: 2px solid transparent;
+    border-radius: 10px;
+    color: rgb(104, 104, 104);
+    padding: 2px;
+    width: 18vw;
+    max-width: 18vw;
+}
+
+.inputSections:hover{
+    background-color: rgb(236, 236, 236);
+    cursor: pointer;
+}
+
+.inputSections:focus{
+    background-color: transparent;
+    cursor: text;
+    color: white;
+    border-color: var(--accent-color);
+    padding: 2px;
+}
+
+#personalDetails p{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#visaPaymentDetails{
+    display: none;
 }
