--- a/Stylesheets/payments.css
+++ b/Stylesheets/payments.css
@@ -94,21 +94,25 @@ header{
 /*===== Main Section =========================================================*/
 
 main{
-    width: 60vw;
+    width: 70vw;
     height: calc(100vh - 100px);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
 .formContainer{
     width: 100%;
-    height: 90%;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
+
+/*===== Details Section =============================================*/
 
 .personalDetailsSection, .paymentDetailsSection{
     background-color: rgb(14, 14, 14);
@@ -121,17 +125,31 @@ main{
     padding: 10px 0;
 }
 
+.paymentContainer{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
 #spanTitle{
     color: var(--accent-color) !important;
     font-size: 30px;
     font-family: var(--Title-font);
 }
 
-#personalDetails ,#paymentDetails{
+#personalDetails ,#paypalPaymentDetails, #visaPaymentDetails{
     width: 80%;
     display: flex;
     flex-direction: column;
     gap: 10px;
+}
+
+#visaPaymentDetails{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
 }
 
 #exDate, #code{
@@ -149,6 +167,10 @@ main{
     max-width: 18vw;
 }
 
+#visaRadio, #paypalRadio{
+    scale: 2;
+}
+
 .inputSections:hover{
     background-color: rgb(236, 236, 236);
     cursor: pointer;
@@ -162,12 +184,118 @@ main{
     padding: 2px;
 }
 
-#personalDetails p{
+#personalDetails p , #paypalPaymentDetails p, #visaPaymentDetails p{
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-#visaPaymentDetails{
+#cardDetails{
+    width: 80%;
+    display: flex !important;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+#cardDetails p{
+    display: flex;
+    justify-content: space-between;
+}
+
+#paypalPaymentDetails{
     display: none;
+}
+
+/*===== Payment Option Section ===============================================*/
+
+.paymentMethodSelection{
+    background-color: rgb(14, 14, 14);
+    border-radius: 20px;
+    width: 40vw;
+    height: 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#paymentOptions{
+    width: 80%;
+    display: flex;
+    justify-content: space-around;
+    font-size: 24px;
+}
+
+#paymentOptions p{
+    width: 200px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+/*===== Order Info Table =====================================================*/
+.orderInfoContainer{
+    width: 30vw;
+    height: 60vh;
+    background-color: rgb(14, 14, 14);
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.orderInfoTitle{
+    font-family: var(--Title-font);
+    color: var(--accent-color);
+}
+
+#orderInfoTable{
+    width: 80%;
+}
+
+#orderInfoTable tr td:nth-child(2){
+    text-align: right;
+}
+
+#tax{
+    border-bottom: 1px solid;
+}
+
+#payBtn{
+    color: var(--text-color);
+    background-color: transparent;
+    width: 20vw;
+    height: 50px;
+    border: 2px solid var(--subback-color);
+    border-radius: 10px;
+    font-weight: 700;
+
+    font-size: 24px;
+    text-align: center;
+    isolation: isolate;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#payBtn span::before{
+    content: ' ';
+    position: absolute;
+    width: 10px;
+    aspect-ratio: 1;
+    background-color: var(--subback-color);
+    inset: 0;
+    margin: auto;
+    z-index: -1;
+    opacity: 0;
+    border-radius: 50%;
+}
+
+#payBtn:hover span::before{
+    opacity: 1;
+    transform: scale(70);
+    transition: transform .45s ease-out;
 }
